--- a/config/nginx/sites-dev/jurassicjs.eu.conf
+++ b/config/nginx/sites-dev/jurassicjs.eu.conf
@@ -8,10 +8,10 @@ server {
   listen                80;
   listen                443 ssl;
 
-  server_name 		    my.dev.nuclei.eu;
+  server_name 		    jurassicjs.eu;
 
-  ssl_certificate       /etc/ssl/my.nuclei/fullchain.pem;
-  ssl_certificate_key   /etc/ssl/my.nuclei/privkey.pem;
+  ssl_certificate       /etc/ssl/jurassicjs.eu/fullchain.pem;
+  ssl_certificate_key   /etc/ssl/jurassicjs.eu/privkey.pem;
 
   root /var/www/html/nuxt-app;
   index index.html;
