--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,8 @@
 version: "3.6"
 services:
-  nginx:
-    image: nginx:1.15
-    working_dir: /var/www/html
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./apps/nuxt-app:/var/www/html/nuxt-app
-      - ./config/ssl:/etc/ssl:ro
-      - ./config/nginx/auth:/etc/nginx/auth
-      - ./config/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./config/nginx/sites-dev:/etc/nginx/sites-enabled
-
-  mysql:
-    image: mysql:5.7
-    ports:
-      - "3306:3306"
-    environment:
-      - MYSQL_DATABASE=${DB_NAME}
-      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
-      - MYSQL_USER=${DB_USERNAME}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
-    volumes:
-      - ./data/schema.sql:/docker-entrypoint-initdb.d
-      - mysqldata:/var/lib/mysql
-
   nuxt-app:
     ports:
-      - "3000:80"
+      - "3000:3000"
       - "24678:24678"
     build:
       dockerfile: Dockerfile
@@ -36,13 +10,9 @@ services:
     working_dir: /var/www/html/nuxt-app
     user: node
     volumes:
-      - ./apps/nuxt-app:/var/www/html/nuxt-app
+      - ./nuxt-app:/var/www/html/nuxt-app
     command: sh -c "npm i && npm run dev"
     stdin_open: true
     tty: true
     networks:
       - default
-
-volumes:
-  mysqldata:
-    driver: local
